# ShuffleParty

./: .env.example  .gitignore  .ruby-gemset  AGENTS.md  CountDownToNextDJ.qtz  DeShuffle-Rariteitenkabinet.txt  Gemfile  Mixer.fzz  README.md  SYSTEM_PROMPT.md  Shuffle.mad  Shuffle.nml  Shuffle.vzr  ShuffleParty.md8  TraktorMidiMapping.tsi  display.py  lighting.py  main.py  mixer.py  parse.js  player.rbx  player_midi.rbx  pyproject.toml  randomcolors.aep  shuffle_party.py  start.sh  track_picker.py
Attic/: Colors.h264.mov  DeShuffle-2014-12-20.txt  Gemfile  Shuffle.nml  ShuffleParty.md8  TECHIEK.md  TraktorMidiMapping.tsi  X-AIR-12.scn  de-shuffle.psd  parse.rb  player_dmx.rbx  player_midi.rbx  serial_test.rbx
Attic/shuffle-1/: shuffle-1.ino
control_with_serial/: control_with_serial.ino
doc/: Simple Mixer Schematics.html  reterminal.md  shuffle-timing.json
qlc/: README.md  ShuffleParty-OSC.qxi  ShuffleParty.autosave.qxw  ShuffleParty.qxw
scripts/: auto_fadeout.py  set_fadeout.py
src/shuffle_party/: __init__.py  __main__.py  app.py  audio_analyzer.py  buttons.py  config.py  control_panel.py  display.py  dmx.py  lighting.py  loudness.py  midi_controller.py  mixer.py  rtpmidi.py  web_display.py
tests/: test_controls.py  test_display.py  test_lighting.py  test_midi_controller.py  test_mixer.py  test_state_machine.py  test_track_picker.py
