[project]
name = "shuffle-party"
version = "0.1.0"
description = "Autonomous DJ rotation system for Raspberry Pi"
requires-python = ">=3.12"
dependencies = [
    "pygame-ce",
    "python-osc",
    "xair-api",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
