[project]
name = "shuffle-party"
version = "0.1.0"
description = "Autonomous DJ rotation system for Raspberry Pi"
requires-python = ">=3.12"
dependencies = [
    "pygame-ce",
    "pyserial",
    "xair-api",
    "mutagen",
    "pyobjc-framework-cocoa>=12.1; sys_platform == 'darwin'",
    "evdev>=1.7; sys_platform == 'linux'",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pillow>=12.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shuffle_party"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
